# mcp-agent-log

./: .env.example  .env.local.example  .gitignore  Dockerfile  README.md  com.local-agent.plist.template  discord_bot.py  docker-compose.yml  local_agent.py  mcp-agent-log.service  pyproject.toml  server.py  setup-auth.sh  setup-local-agent.sh
nginx/: mcp.conf.example  nginx.conf
