[project]
name = "mcp-agent-log"
version = "0.1.0"
description = "MCP server for sharing conversation logs between AI agents"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "starlette>=0.27.0",
    "uvicorn>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
